[project]
name = "cun-agent"
version = "0.1.0"
description = "AI Agent + MCP servers para cierre de turno clínico"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "mcp>=1.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
cun-agent = "agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["agent", "mcp_servers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
